<resources>
    <string name="app_name">iSH Emulator</string>
    <string name="tab">Tab</string>
    <string name="ctrl">Ctrl</string>
    <string name="esc">Esc</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
</resources>
